--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@angular/common": "^16.2.9",
+    "@angular/router": "^16.2.9",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
