--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "@auth0/angular-jwt": "^5.1.2",
     "angular-confirmation-popover": "^7.0.0",
     "bootstrap": "^5.3.2",
+    "font-awesome": "^4.7.0",
     "mdb-angular-ui-kit": "^5.1.0",
     "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
